--- a/kubernetes/monitoring/install_prometheus.yaml
+++ b/kubernetes/monitoring/install_prometheus.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Установить Prometheus
-  hosts: your_prometheus_servers
+  hosts: localhost
   become: yes
   tasks:
     - name: Создать директории для Prometheus
@@ -13,7 +13,7 @@
 
     - name: Загрузить и распаковать Prometheus
       get_url:
-        url: wget https://github.com/prometheus/prometheus/releases/download/v2.48.0-rc.1/prometheus-2.48.0-rc.1.linux-amd64.tar.gz
+        url: https://github.com/prometheus/prometheus/releases/download/v2.45.0/prometheus-2.45.0.linux-amd64.tar.gz
         dest: /tmp/prometheus.tar.gz
       register: download_prometheus
 
