--- a/kubernetes/monitoring/install_prometheus.yaml
+++ b/kubernetes/monitoring/install_prometheus.yaml
@@ -12,7 +12,7 @@
         - /var/lib/prometheus
 
     - name: Загрузить и распаковать Prometheus
-      shell: wget https://github.com/prometheus/prometheus/releases/download/v2.45.0/prometheus-2.45.0.linux-amd64.tar.gz -O /tmp/prometheus.tar.gz
+      shell: wget https://github.com/prometheus/prometheus/releases/download/v2.48.0-rc.1/prometheus-2.48.0-rc.1.linux-amd64.tar.gz
       async: 1800
       poll: 0
       register: download_prometheus
