--- a/kubernetes/monitoring/install_prometheus.yaml
+++ b/kubernetes/monitoring/install_prometheus.yaml
@@ -11,39 +11,31 @@
         - /etc/prometheus
         - /var/lib/prometheus
 
-    - name: Загрузить и распаковать Prometheus
-      shell: wget https://github.com/prometheus/prometheus/releases/download/v2.45.0/prometheus-2.45.0.linux-amd64.tar.gz
-      async: 1800
-      poll: 0
-      register: download_prometheus
-      until: download_prometheus.finished
-      retries: 10
+    - name: Загрузить Prometheus
+      get_url:
+        url: "https://github.com/prometheus/prometheus/releases/download/v2.45.0/prometheus-2.45.0.linux-amd64.tar.gz"
+        dest: "/tmp/prometheus.tar.gz"
 
-    - name: Распаковать архив Prometheus
-      unarchive:
-        src: /tmp/prometheus.tar.gz
-        dest: /tmp/
-        remote_src: yes
-      when: download_prometheus.rc == 0
+    - name: Распаковать Prometheus
+      command: "tar xzvf /tmp/prometheus.tar.gz -C /tmp/"
+      args:
+        creates: "/tmp/prometheus-2.45.0.linux-amd64/"
 
     - name: Установить Prometheus бинарники
-      command: >
-        cp -r /tmp/prometheus-2.45.0.linux-amd64/{{ item }} /usr/local/bin/
+      command: "cp -r /tmp/prometheus-2.45.0.linux-amd64/{{ item }} /usr/local/bin/"
       loop:
         - prometheus
         - promtool
-      notify: Reload Prometheus
 
     - name: Скопировать конфигурацию Prometheus
       copy:
-        src: /tmp/prometheus-2.45.0.linux-amd64/prometheus.yml
-        dest: /etc/prometheus/prometheus.yml
+        src: "/tmp/prometheus-2.45.0.linux-amd64/prometheus.yml"
+        dest: "/etc/prometheus/prometheus.yml"
 
     - name: Создать systemd unit файл для Prometheus
       template:
         src: prometheus.service.j2
-        dest: /etc/systemd/system/prometheus.service
-      notify: Reload Prometheus
+        dest: "/etc/systemd/system/prometheus.service"
 
     - name: Создать Prometheus пользователя
       user:
