--- a/kubernetes/monitoring/install_alertmanager.yaml
+++ b/kubernetes/monitoring/install_alertmanager.yaml
@@ -31,6 +31,7 @@
       copy:
         src: "/tmp/alertmanager-0.25.0.linux-amd64/alertmanager.yml"
         dest: "/etc/alertmanager/alertmanager.yml"
+        remote_src: yes
 
     - name: Создать systemd unit файл для Alertmanager
       template:
