--- a/kubernetes/monitoring/install_alertmanager.yaml
+++ b/kubernetes/monitoring/install_alertmanager.yaml
@@ -57,5 +57,5 @@
   handlers:
     - name: Reload Alertmanager
       systemd:
-        name: alertmanager
+        name: alertmanager.service
         state: restarted
